[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
base64 = "0.22"
bytes = "1"
image = "0.25"
lazy_static = "1"
lru = "0.12"
percent-encoding = "2"
photon-rs = "0.3"
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.5", features = [
    "add-extension",
    "compression-full",
    "trace",
] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
prost = "0.13"
